adjust join form profile width, to prevent wrapping.

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
     width:100%;
 }
 .profile dl {
-    width: 50em;
+    width: 53em;
     margin: .8em;
     list-style-type: none;
 }
